SAVE/myapp-canary/base/svc-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-active
spec:
  selector:
    app: myapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
